@@ -1,5 +1,7 @@
 Changes with APR-util 0.9.6
 
+  *) Add an RPM spec file. [Graham Leggett]
+
   *) Add a build script to create a solaris package. [Graham Leggett]
 
 Changes with APR-util 0.9.5
